# z2-arm-libtorch

./: CMakeLists.txt  README.md
scripts/: build.sh  configure.sh  run.sh
src/: libtorch-test.cpp
